examples/pass/io/stdout_int.dew
// expect: 42
def main = fn { 42 -> stdout; };
