examples/fail/type/not_a_function.dew
// expect error: [E003]
def x = 42;
def main = fn { x(5) -> stdout; };
